<resources>
    <string name="app_name">Wanda Mobile</string>

    <string name="client_secret">uy90t9L5xjgiYYWrBINzqs4JvHbGvC0tE72pTWeT</string>
    <string name="grant_type">password</string>
    <string name="client_id">2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="network_unavailable">Internet connection unavailable</string>
    <string name="enter_username">Please enter your username</string>
    <string name="enter_password">Please enter a valid password</string>
    <string name="loading">Loading…</string>

    <!-- Main Menu Options -->
    <string name="farmer_reg">Farmer Registration</string>
    <string name="farm_audit">Farm Visit</string>
    <string name="add_farm">Add Farm</string>
    <string name="order_mgmt">Order Management</string>
    <string name="farmer_voucher">Farmer Voucher Topup</string>
    <string name="promoter_voucher">Promoter Voucher Management</string>
    <string name="commission_mgmt">Commissions</string>

    <!-- Commission Menu Options -->
    <string name="check_commission">Check Commission</string>
    <string name="request_commission">Request Commission</string>
    <string name="commission_request_processed">Request successfully processed. You shall be notified when your commission has been processed.</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="ward">Ward</string>
    <string name="collection_center">Collection Center</string>
    <string name="submit">Submit</string>
    <string name="farmer_reg_successful">Farmer successfully registered.</string>
    <string name="size">Farm Size</string>
    <string name="description">Description</string>
    <string name="search_farmer">Search farmer</string>
    <string name="error_occurred">Sorry, an error occurred!</string>
    <string name="retry">Retry</string>

    <!--error handler messages-->
    <string name="something_went_wrong">Oops, something went wrong.</string>
    <string name="access_denied">Sorry, access denied.</string>
    <string name="request_denied">Sorry, your request has been denied.</string>
    <string name="unprocessable_entity">Malformed request</string>
    <string name="not_found">Requested resource is unavailable</string>
    <string name="error_on_service_access">An error occurred while you were trying to access the service.</string>
    <string name="service_could_not_complete_request">The service could not complete your request.</string>
    <string name="service_not_available">The service is not available, please try again.</string>
    <string name="unexpected_error">An unexpected error occurred. Please try again.</string>
    <string name="network_error">A network error occurred. Please check your connection.</string>
    <string name="farm_audit_successful">Farm added successfully</string>
    <string name="check_voucher_balance">Check voucher balance</string>
    <string name="voucher_top_up">Voucher top up</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay_cash">Pay cash</string>
    <string name="mpesa_now">Pay now with MPESA</string>
    <string name="mpesa_later">Pay later with MPESA</string>
    <string name="enter_valid_amount">Please enter a valid amount to proceed</string>
    <string name="create_order">Create Order</string>
    <string name="pendingOrders">Pending Orders</string>
    <string name="no_pending_orders">You have no pending orders</string>
    <string name="pay_order">Pay Order</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="select_farmer">Select Farmer</string>
    <string name="empty_products">No products available for this category</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_quantity">Please enter the quantity</string>
    <string name="confirm">Confirm</string>
    <string name="enter_valid_quantity">Please enter a valid quantity to proceed.</string>
    <string name="checkout">Checkout</string>
    <string name="order_review">Order Review</string>
    <string name="complete_order">Complete Order</string>
    <string name="total">Total</string>
    <string name="items_cost">Items Cost</string>
    <string name="delivery_cost">Estimated Delivery Cost</string>
    <string name="comments">Comments</string>
    <string name="farm_visit">Farm Visit</string>
    <string name="search_farm">Search Farm</string>
    <string name="total_amount">Total Amount</string>
    <string name="reference">Reference Number</string>
    <string name="make_payment">Make Payment</string>
    <string name="order_details">Order Details</string>
    <string name="cart_cleared">Cart cleared</string>
    <string name="no_pending_payments">You have no pending payments</string>
    <string name="pending_payment">Pending Payment</string>

    <plurals name="no_of_items">
        <item quantity="one">Checkout (%d)</item>
        <item quantity="other">Checkout (%d)</item>
    </plurals>

</resources>
