<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/farmerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/farmerName"
        android:layout_marginBottom="15dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/ward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginBottom="15dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/ward"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/collectionCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ward"
        android:background="@drawable/textbox_bg"
        android:hint="@string/collection_center"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bg"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>