<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/parentLayout">

    <EditText
        android:id="@+id/farmerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/farmSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/farmerName"
        android:layout_marginBottom="15dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/size"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/farmSize"
        android:lines="5"
        android:gravity="top"
        android:maxLines="5"
        android:background="@drawable/textbox_bg"
        android:hint="@string/description"
        android:inputType="textMultiLine|textCapSentences" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bg"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>