<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/ward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/ward"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/farmSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ward"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/size"
        android:inputType="number" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/farmSize"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/textbox_bg"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:maxLines="5" />

    <Button
        android:id="@+id/submit"
        fontPath="fonts/PT_Sans-Web-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

</RelativeLayout>