<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="55dp"
            android:src="@drawable/app_logo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:hint="@string/username"
            android:text="254714074027"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:text="Kombo2017"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <Button
            android:id="@+id/login"
            fontPath="fonts/CircularStd-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

</RelativeLayout>