<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/totalDetails"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/completeOrder"
        android:background="#eee">

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:background="@color/colorPrimaryDark" />-->

        <TextView
            android:id="@+id/itemsCostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/deliveryCostText"
            android:padding="7dp"
            android:text="@string/items_cost"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/itemsCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/deliveryCost"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:text="KES 50"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/deliveryCostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/totalText"
            android:padding="7dp"
            android:text="@string/delivery_cost"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/deliveryCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/total"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:text="KES 50"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="7dp"
            android:text="@string/total"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:text="KES 50"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </RelativeLayout>

    <Button
        android:id="@+id/completeOrder"
        fontPath="fonts/CircularStd-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/complete_order"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

</RelativeLayout>