<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_change" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:text="@string/total_amount"
        android:textColor="#000" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalText"
        android:layout_centerHorizontal="true"
        android:text="KES 2150"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:contentPadding="5dp">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:background="#eee" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#fff"
                android:padding="10dp"
                android:text="@string/order_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/totalDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/referenceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"
                android:layout_toStartOf="@+id/reference"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:text="N6NCZ3YT"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemsCostText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/referenceText"
                android:layout_marginBottom="15dp"
                android:layout_toStartOf="@+id/itemsCost"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/items_cost"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/itemsCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/reference"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="5dp"
                android:text="KES 50"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deliveryCostText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/itemsCostText"
                android:layout_toStartOf="@+id/deliveryCost"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Delivery Cost"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/deliveryCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/itemsCost"
                android:layout_marginStart="5dp"
                android:text="KES 50"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#fff"
        android:padding="15dp">

        <Button
            android:id="@+id/makePayment"
            fontPath="fonts/PT_Sans-Web-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/make_payment"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

</RelativeLayout>