<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Your Cart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                app:contentPadding="5dp">

                <RelativeLayout
                    android:id="@+id/totalDetails"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:layout_marginEnd="10dp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginStart="10dp"-->
                    <!--android:background="@color/colorPrimaryDark" />-->

                    <TextView
                        android:id="@+id/itemsCostText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/deliveryCostText"
                        android:padding="10dp"
                        android:text="@string/items_cost"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/itemsCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/deliveryCost"
                        android:layout_alignParentEnd="true"
                        android:padding="10dp"
                        android:text="KES 50"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/deliveryCostText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/totalText"
                        android:padding="10dp"
                        android:text="@string/delivery_cost"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/deliveryCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/total"
                        android:layout_alignParentEnd="true"
                        android:padding="10dp"
                        android:text="KES 50"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/totalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:padding="10dp"
                        android:text="@string/total"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:padding="10dp"
                        android:text="KES 50"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/completeOrder"
        fontPath="fonts/PT_Sans-Web-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/complete_order"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_anchor="@id/nestedScrollView"
        app:layout_anchorGravity="bottom|end"
        tools:ignore="MissingPrefix" />

</android.support.design.widget.CoordinatorLayout>